feat: update app layout

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<app-root></app-root>
+		<yee-root></yee-root>
 
 		<noscript>Please enable JavaScript to continue using this application.</noscript>
 	</body>
